# filepreview

./: Cargo.toml  Dockerfile  LICENSE  POSTMAN_COLLECTION_README.md  README.md  build-and-test.sh  docker-compose.yml  example_docx_to_doc.js  filepreview-api.postman_collection.json  filepreview.go  filepreview.js  go.mod  handlers.go  k8s-deployment.yaml  main.go  package.json
laravel-integration/: FilePreviewController.php  FilePreviewService.php  config-services.php  routes-example.php
src/: error.rs  handlers.rs  main.rs  preview.rs  types.rs
