[package]
name = "filepreview-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["stream"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
mime_guess = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3.8"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"